# easter-egg-hunt

./: .gitignore  .mcp.json  CLAUDE.md  pyproject.toml
.claude/: settings.json
docs/: README.md
docs/plans/: README.md
docs/plans/01-InitialContext/: Brainstorming.md  HelpfulResources.md  README.md
docs/plans/02-Ideation/: ExecutionOverview.md  GameMechanics.md  README.md  TechDecisions.md  WebsiteContent.md
docs/plans/05-PhysicalPrep/: DayOfTimeline.md  EggPrepChecklist.md  README.md  SuppliesList.md
docs/plans/06-WebsiteArchitecture/: DesignSystem.md  README.md  SiteMap.md
docs/plans/09-InviteSend/: DeployChecklist.md  InviteMessage.md  README.md
scripts/: dev-server.sh
site/: README.md  index.html  prep.html  scoring.html  tasks-print.html
site/css/: prep.css  scoring.css  style.css  tasks-print.css
site/data/: config.json
site/img/players/: README.md
site/js/: config.js  main.js  nav.js  prep.js  scoring.js
tests/: conftest.py  test_deployed.py  test_homepage.py
